# repro-maa

./: .gitignore  .gitmodules  CLAUDE.md  pyproject.toml
.claude/commands/: auto-research-init.md
auto/: bench.py  program.md  results.tsv
docs/chunks/curiosity_grpo_loop/: GOAL.md  PLAN.md
docs/chunks/mdl_curiosity_scorer/: GOAL.md  PLAN.md
docs/chunks/prompt_reward_bridge/: GOAL.md  PLAN.md
docs/chunks/scaffold_project/: GOAL.md  PLAN.md
docs/chunks/simulation_harness/: GOAL.md  PLAN.md
docs/chunks/stream_generator/: GOAL.md  PLAN.md
docs/chunks/stream_visualization/: GOAL.md  PLAN.md
docs/chunks/taskcell_abstraction/: GOAL.md  PLAN.md
docs/chunks/training_comparison/: GOAL.md  PLAN.md
docs/investigations/program_triples/: OVERVIEW.md
docs/investigations/selection_granularity/: OVERVIEW.md
docs/narratives/curiosity_stream_mvp/: OVERVIEW.md
docs/narratives/curiosity_training_run/: .OVERVIEW.md.swp  OVERVIEW.md
docs/reviewers/baseline/: METADATA.yaml  PROMPT.md
docs/reviewers/baseline/decisions/: curiosity_grpo_loop_1.md  (+8 more)
docs/trunk/: EXTERNAL.md  FRICTION.md  GOAL.md  ORCHESTRATOR.md  TESTING_PHILOSOPHY.md
scripts/: smoke_test.py
src/repro_maa/: __init__.py  __main__.py  compare_training.py  maa_compat.py  mdl_scorer.py  prompt_reward_bridge.py  simulation.py  stream.py  task_cell.py  train.py  visualize.py
tests/: conftest.py  test_compare_training.py  test_integration_maa.py  test_mdl_scorer.py  test_prompt_reward_bridge.py  test_simulation.py  test_stream_generator.py  test_task_cell.py  test_train.py  test_visualize.py
