[project]
name = "repro-maa"
version = "0.1.0"
description = "Reproducibility scaffold for Meta-Ability-Alignment experiments"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repro_maa"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
